--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-__pycache__
-flask_session
-chromedriver.exe
-scraping
+node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+geckodriver.log
