--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "mongodb": "^5.6.0",
+    "nodemon": "^3.0.1"
   },
   "type": "module"
 }
